RESOLVED FIXED187350
REGRESSION: Web Inspector no longer pauses in internal injected scripts like WDFindNodes.js
https://bugs.webkit.org/show_bug.cgi?id=187350
Summary REGRESSION: Web Inspector no longer pauses in internal injected scripts like ...
Blaze Burg
Reported 2018-07-05 10:49:34 PDT
This seems to be fallout from internal script black boxing.
Attachments
Patch (18.96 KB, patch)
2018-07-05 11:00 PDT, Blaze Burg
mattbaker: review+
Blaze Burg
Comment 1 2018-07-05 10:49:56 PDT
Blaze Burg
Comment 2 2018-07-05 11:00:05 PDT
Matt Baker
Comment 3 2018-07-09 09:54:57 PDT
Comment on attachment 344343 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=344343&action=review r=me > Source/JavaScriptCore/inspector/agents/InspectorDebuggerAgent.cpp:887 > +void InspectorDebuggerAgent::setPauseForInternalScripts(ErrorString &, bool shouldPause) Style: pointer types and reference types should be written with no space between the type name and the * or & (https://webkit.org/code-style-guidelines/#pointers-cpp) > Source/WebInspectorUI/UserInterface/Base/Setting.js:136 > + pauseForInternalScripts: new WI.Setting("pause-for-internal-scripts", false), Nice cleanup.
Blaze Burg
Comment 4 2018-07-09 13:00:41 PDT
Note You need to log in before you can comment on or make changes to this bug.